# RayTracingRust

./: Cargo.toml  README.md  img.ppm
src/: camera.rs  generate_scene.rs  main.rs  material.rs  number_stuff.rs  ray.rs  ray_trace.rs  sphere.rs  vec3.rs
